--- a/notebooks/test-notebook_0521.ipynb
+++ b/notebooks/test-notebook_0521.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {
     "id": "-fcOLmCJ4AiS"
    },
@@ -98,6 +98,7 @@
     "from gradio_client import Client\n",
     "\n",
     "from groq import Groq\n",
+    "import config\n",
     "\n",
     "df = pd.read_parquet('Halved-DF.parquet.gzip')\n",
     "\n",
@@ -112,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# combinations_of_two -> GOOD\n",
+    "# combinations_of_two -> DONE\n",
     "-> working correctly (assuming desired output format is: list of tuples, containing all possible combinations of two ingredients)"
    ]
   },
@@ -877,14 +878,14 @@
     "id": "e7tWuDK24AiT"
    },
    "source": [
-    "# recipe_generator -> GOOD\n",
+    "# recipe_generator -> DONE\n",
     "\n",
     "Working correctly! Only issue is client-side seems to go down every once in a while (400 error)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {
     "id": "lB8VK2-F4AiU"
    },
@@ -907,8 +908,8 @@
     "\n",
     "    '''\n",
     "\n",
-    "#     api_key = \"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\"\n",
-    "    api_key = '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'\n",
+    "\n",
+    "    api_key = config.api_key2\n",
     "    client = Groq(\n",
     "    api_key=api_key\n",
     "    )\n",
@@ -977,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {
     "id": "lB8VK2-F4AiU"
    },
@@ -985,18 +986,18 @@
     {
      "data": {
       "text/plain": [
-       "[{'title': 'Garlic Chicken Tomato Skillet',\n",
-       "  'ingredients': '* 1 lb chicken breast or thighs, cut into 1-inch pieces\\n* 2 large tomatoes, diced\\n* 3 cloves garlic, minced',\n",
-       "  'directions': '1. Heat a large skillet over medium-high heat.\\n2. Add chicken to skillet and cook until browned, about 5-6 minutes. Remove from skillet and set aside.\\n3. Add garlic to skillet and cook until fragrant, about 1 minute.\\n4. Add diced tomatoes to skillet and cook until they start to soften, about 2-3 minutes.\\n5. Add chicken back to skillet and stir to combine with tomato and garlic mixture. Cook until chicken is cooked through and tomato mixture is tender.'},\n",
-       " {'title': 'Simple Grilled Chicken',\n",
-       "  'ingredients': '- 1 chicken breast\\n- 1/2 onion, sliced\\n- Salt, to taste',\n",
-       "  'directions': '1. Preheat grill to medium-high heat.\\n2. Season chicken with salt, then brush both sides with a little water.\\n3. Grill chicken for 6-7 minutes per side, or until cooked through.\\n4. Meanwhile, grill onion slices until caramelized and slightly charred.\\n5. Serve chicken with grilled onion.'},\n",
-       " {'title': 'Caramelized Onion Relish',\n",
-       "  'ingredients': '* 1 large onion, thinly sliced\\n* 1/2 teaspoon salt\\n* 2 cloves garlic, minced',\n",
-       "  'directions': '1. In a large saucepan, combine the sliced onion, salt, and garlic. Cook over medium-low heat, stirring occasionally, until the onions are caramelized and golden brown, about 30-40 minutes.'}]"
+       "[{'title': 'Roasted Chicken with Garlic and Tomatoes',\n",
+       "  'ingredients': '* 1 Pound Boneless, Skinless Chicken Breast\\n* 2 Big Tomatoes, Cut into 1-inch Pieces\\n* 5 Garlic Cloves, Minced',\n",
+       "  'directions': '1. Preheat oven to 425°F (220°C).\\n2. In a large bowl, toss chicken, tomatoes, and garlic with a pinch of salt and pepper.\\n3. Spread the mixture on a baking sheet lined with parchment paper.\\n4. Roast for 25-30 minutes or until chicken is cooked through and cooked through.\\n5. Serve hot.'},\n",
+       " {'title': 'Savory Chicken and Onion',\n",
+       "  'ingredients': '* 1 lb chicken\\n* 1 onion\\n* pink salt',\n",
+       "  'directions': '1. Preheat pan over medium heat.\\n2. Add onion and sauté until tender.\\n3. Add chicken and sprinkle with salt.\\n4. Cook until chicken is cooked through.\\n5. Serve hot.'},\n",
+       " {'title': 'Garlic-Flavored Onion',\n",
+       "  'ingredients': '* 1 onion, thinly sliced\\n* 1/2 teaspoon salt\\n* 2 cloves garlic, minced',\n",
+       "  'directions': '1. In a large pan, combine the sliced onion and salt. Cook over medium heat until the onion is caramelized and golden brown, stirring occasionally.\\n2. Add the minced garlic to the pan and cook for an additional 1-2 minutes, stirring constantly to prevent burning.\\n3. Serve the garlic-infused onion as a side dish or use as a topping for your favorite dish.'}]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1028,7 @@
    "metadata": {},
    "source": [
     "# get_scores (new function that used to be random code in app.py)\n",
-    "Output format is OK!, so the code will run. However...\n",
+    "Output format is OK so the code will run, but...\n",
     "\n",
     "Issues:\n",
     "- Scores seem to not differ much for both good recipes and nonsense recipes?"
@@ -1147,8 +1148,9 @@
     "# final_recipes\n",
     "\n",
     "<br>Issues:\n",
-    "- Lots of problems with output format (3 titles returned but only 1 ingredients and 1 directions, values are in list format, etc)\n",
-    "- Only 1 recipe being returned, regardless of score"
+    "- Output format\n",
+    "    - output is 1 dict with 3 titles, 1 ingredients, 1 directions\n",
+    "    - dict values are in list format"
    ]
   },
   {
