added image gen stuff

--- a/notebooks/test-notebook_0521.ipynb
+++ b/notebooks/test-notebook_0521.ipynb
@@ -3311,7 +3311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 128,
    "metadata": {
     "id": "lB8VK2-F4AiU"
    },
@@ -3342,20 +3342,20 @@
     "\n",
     "    \"\"\"\n",
     "\n",
-    "    final_recipes = {\"Title\": [], \"Ingredients\": [], \"Directions\": []}\n",
+    "    final_recipes = {\"title\": [], \"ingredients\": [], \"directions\": []}\n",
     "    threshold = 0.3\n",
     "\n",
     "    for i in range(len(recipe_list)):\n",
     "        if scores[i] >= threshold:\n",
-    "            final_recipes[\"Title\"].append(recipe_list[i]['title'])\n",
-    "            final_recipes[\"Ingredients\"].append(recipe_list[i]['ingredients'])\n",
-    "            final_recipes[\"Directions\"].append(recipe_list[i]['directions'])\n",
+    "            final_recipes[\"title\"].append(recipe_list[i]['title'])\n",
+    "            final_recipes[\"ingredients\"].append(recipe_list[i]['ingredients'])\n",
+    "            final_recipes[\"directions\"].append(recipe_list[i]['directions'])\n",
     "        else:\n",
     "            n = 0\n",
     "            tmp_recipe = {\n",
-    "                \"Title\":recipe_list[i]['title'],\n",
-    "                \"Ingredients\":recipe_list[i]['ingredients'],\n",
-    "                \"Directions\":recipe_list[i]['directions']\n",
+    "                \"title\":recipe_list[i]['title'],\n",
+    "                \"ingredients\":recipe_list[i]['ingredients'],\n",
+    "                \"directions\":recipe_list[i]['directions']\n",
     "                         }\n",
     "            last_recipe = {\"title\":[],\n",
     "                           \"ingredients\":[],\n",
@@ -3365,17 +3365,17 @@
     "                new_recipe = recipe_generator([tmp_recipe[\"Ingredients\"]]) ###<=== insert actual recipe generator\n",
     "                new_score = model.predict_proba([new_recipe[0]['directions']]) ###<=== insert the actual scoring model function here\n",
     "                if new_score[0][1] >= threshold:\n",
-    "                    final_recipes[\"Title\"].append(new_recipe[0][\"title\"])\n",
-    "                    final_recipes[\"Ingredients\"].append(new_recipe[0][\"ingredients\"])\n",
-    "                    final_recipes[\"Directions\"].append(new_recipe[0][\"directions\"])\n",
+    "                    final_recipes[\"title\"].append(new_recipe[0][\"title\"])\n",
+    "                    final_recipes[\"ingredients\"].append(new_recipe[0][\"ingredients\"])\n",
+    "                    final_recipes[\"directions\"].append(new_recipe[0][\"directions\"])\n",
     "                    break  # Exit loop if the new recipe passes the threshold\n",
     "                else:\n",
     "                    last_recipe = new_recipe  # Update tmp_recipe with the new recipe if the threshold isn't met\n",
     "                    n += 1\n",
     "            else: # Add the last generated recipe if the loop completes without finding a passing recipe\n",
-    "                final_recipes[\"Title\"].append(last_recipe[0][\"title\"][0][0])\n",
-    "                final_recipes[\"Ingredients\"].append(last_recipe[0][\"ingredients\"][0][0])\n",
-    "                final_recipes[\"Directions\"].append(last_recipe[0][\"directions\"][0][0])\n",
+    "                final_recipes[\"title\"].append(last_recipe[0][\"title\"][0][0])\n",
+    "                final_recipes[\"ingredients\"].append(last_recipe[0][\"ingredients\"][0][0])\n",
+    "                final_recipes[\"directions\"].append(last_recipe[0][\"directions\"][0][0])\n",
     "                break  # Exit the outer loop to prevent an unending loop\n",
     "\n",
     "    return final_recipes"
@@ -3384,6 +3384,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "id": "EL3Z18CS4AiV"
    },
    "source": [
@@ -3392,26 +3393,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 129,
    "metadata": {
+    "hidden": true,
     "id": "EL3Z18CS4AiV"
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Title': ['Garlic Chicken Tomato Skillet',\n",
+       "{'title': ['Garlic Chicken Tomato Skillet',\n",
        "  'Simple Grilled Chicken',\n",
        "  'Caramelized Onion Relish'],\n",
-       " 'Ingredients': ['* 1 lb chicken breast or thighs, cut into 1-inch pieces\\n* 2 large tomatoes, diced\\n* 3 cloves garlic, minced',\n",
+       " 'ingredients': ['* 1 lb chicken breast or thighs, cut into 1-inch pieces\\n* 2 large tomatoes, diced\\n* 3 cloves garlic, minced',\n",
        "  '- 1 chicken breast\\n- 1/2 onion, sliced\\n- Salt, to taste',\n",
        "  '* 1 large onion, thinly sliced\\n* 1/2 teaspoon salt\\n* 2 cloves garlic, minced'],\n",
-       " 'Directions': ['1. Heat a large skillet over medium-high heat.\\n2. Add chicken to skillet and cook until browned, about 5-6 minutes. Remove from skillet and set aside.\\n3. Add garlic to skillet and cook until fragrant, about 1 minute.\\n4. Add diced tomatoes to skillet and cook until they start to soften, about 2-3 minutes.\\n5. Add chicken back to skillet and stir to combine with tomato and garlic mixture. Cook until chicken is cooked through and tomato mixture is tender.',\n",
+       " 'directions': ['1. Heat a large skillet over medium-high heat.\\n2. Add chicken to skillet and cook until browned, about 5-6 minutes. Remove from skillet and set aside.\\n3. Add garlic to skillet and cook until fragrant, about 1 minute.\\n4. Add diced tomatoes to skillet and cook until they start to soften, about 2-3 minutes.\\n5. Add chicken back to skillet and stir to combine with tomato and garlic mixture. Cook until chicken is cooked through and tomato mixture is tender.',\n",
        "  '1. Preheat grill to medium-high heat.\\n2. Season chicken with salt, then brush both sides with a little water.\\n3. Grill chicken for 6-7 minutes per side, or until cooked through.\\n4. Meanwhile, grill onion slices until caramelized and slightly charred.\\n5. Serve chicken with grilled onion.',\n",
        "  '1. In a large saucepan, combine the sliced onion, salt, and garlic. Cook over medium-low heat, stirring occasionally, until the onions are caramelized and golden brown, about 30-40 minutes.']}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3442,22 +3444,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
+   "execution_count": 130,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Title': [\"Gurum's Mysterious Delight\", 'Recchio Croco', 'Title:'],\n",
-       " 'Ingredients': ['* Rugby grass (1 cup, chopped fresh)\\n* Gum (1 tablespoon, dissolved)\\n* Rum (2 tablespoons)\\n* Mug (1, made from ceramic)',\n",
+       "{'title': [\"Gurum's Mysterious Delight\", 'Recchio Croco', 'Title:'],\n",
+       " 'ingredients': ['* Rugby grass (1 cup, chopped fresh)\\n* Gum (1 tablespoon, dissolved)\\n* Rum (2 tablespoons)\\n* Mug (1, made from ceramic)',\n",
        "  '* RO Crumbs\\n* Curing Oil\\n* Ounces of Cream',\n",
        "  '* 1 cup cherry tomatoes, halved\\n* 1/2 cup mashed chickpeas\\n* 1/4 cup chopped fresh cucumbers\\n* 2 tablespoons olive oil\\n* 2 tablespoons hummus\\n* 1/2 teaspoon paprika'],\n",
-       " 'Directions': ['1. Combine Rugby grass, gum, and rum in the mug.\\n2. Stir clockwise for 7 times, then counterclockwise for 3 times.\\n3. Serve immediately.',\n",
+       " 'directions': ['1. Combine Rugby grass, gum, and rum in the mug.\\n2. Stir clockwise for 7 times, then counterclockwise for 3 times.\\n3. Serve immediately.',\n",
        "  '1. Crumble RO Crumbs into a crock\\n2. Coat Croco with Curing Oil\\n3. Ooze Cream over Croco',\n",
        "  '1. Preheat oven to 375°F.\\n2. In a bowl, mix together hummus, paprika, and olive oil.\\n3. Dip each cherry tomato half into the hummus mixture, coating evenly.\\n4. Place coated cherry tomato halves on a baking sheet.\\n5. Sprinkle chopped cucumbers on top of tomato halves.\\n6. Bake for 20-25 minutes, or until crispy and golden brown.\\n7. Serve and enjoy!']}"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3489,7 +3493,9 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3535,7 +3541,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3582,7 +3590,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Testing final_recipes all the way through"
    ]
@@ -3590,7 +3600,9 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3758,28 +3770,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -3787,51 +3807,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# to_dictionary"
+    "# get_key_lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_key_lists(final_recipes):\n",
     "    directions, titles, ingredients = [], [], []\n",
-    "    titles.append(final_recipes[\"Title\"])\n",
-    "    ingredients.append(final_recipes[\"Ingredients\"])\n",
-    "    directions.append(final_recipes[\"Directions\"])\n",
+    "    for recipe in final_recipes:\n",
+    "        titles.append(recipe[\"title\"])\n",
+    "        ingredients.append(recipe[\"ingredients\"])\n",
+    "        directions.append(recipe[\"directions\"])\n",
     "    return titles, ingredients, directions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [117], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mto_dictionary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrecipe_list\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn [115], line 3\u001b[0m, in \u001b[0;36mto_dictionary\u001b[0;34m(final_recipes)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mto_dictionary\u001b[39m(final_recipes):\n\u001b[1;32m      2\u001b[0m     directions, titles, ingredients \u001b[38;5;241m=\u001b[39m [], [], []\n\u001b[0;32m----> 3\u001b[0m     titles\u001b[38;5;241m.\u001b[39mappend(\u001b[43mfinal_recipes\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTitle\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m      4\u001b[0m     ingredients\u001b[38;5;241m.\u001b[39mappend(final_recipes[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIngredients\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m      5\u001b[0m     directions\u001b[38;5;241m.\u001b[39mappend(final_recipes[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDirections\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'title': \"Gurum's Mysterious Delight\",\n",
+       "  'ingredients': '* Rugby grass (1 cup, chopped fresh)\\n* Gum (1 tablespoon, dissolved)\\n* Rum (2 tablespoons)\\n* Mug (1, made from ceramic)',\n",
+       "  'directions': '1. Combine Rugby grass, gum, and rum in the mug.\\n2. Stir clockwise for 7 times, then counterclockwise for 3 times.\\n3. Serve immediately.'},\n",
+       " {'title': 'Recchio Croco',\n",
+       "  'ingredients': '* RO Crumbs\\n* Curing Oil\\n* Ounces of Cream',\n",
+       "  'directions': '1. Crumble RO Crumbs into a crock\\n2. Coat Croco with Curing Oil\\n3. Ooze Cream over Croco'},\n",
+       " {'title': 'Title:',\n",
+       "  'ingredients': '* 1 cup cherry tomatoes, halved\\n* 1/2 cup mashed chickpeas\\n* 1/4 cup chopped fresh cucumbers\\n* 2 tablespoons olive oil\\n* 2 tablespoons hummus\\n* 1/2 teaspoon paprika',\n",
+       "  'directions': '1. Preheat oven to 375°F.\\n2. In a bowl, mix together hummus, paprika, and olive oil.\\n3. Dip each cherry tomato half into the hummus mixture, coating evenly.\\n4. Place coated cherry tomato halves on a baking sheet.\\n5. Sprinkle chopped cucumbers on top of tomato halves.\\n6. Bake for 20-25 minutes, or until crispy and golden brown.\\n7. Serve and enjoy!'}]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "to_dictionary(recipe_list)"
+    "recipe_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([\"Gurum's Mysterious Delight\", 'Recchio Croco', 'Title:'],\n",
+       " ['* Rugby grass (1 cup, chopped fresh)\\n* Gum (1 tablespoon, dissolved)\\n* Rum (2 tablespoons)\\n* Mug (1, made from ceramic)',\n",
+       "  '* RO Crumbs\\n* Curing Oil\\n* Ounces of Cream',\n",
+       "  '* 1 cup cherry tomatoes, halved\\n* 1/2 cup mashed chickpeas\\n* 1/4 cup chopped fresh cucumbers\\n* 2 tablespoons olive oil\\n* 2 tablespoons hummus\\n* 1/2 teaspoon paprika'],\n",
+       " ['1. Combine Rugby grass, gum, and rum in the mug.\\n2. Stir clockwise for 7 times, then counterclockwise for 3 times.\\n3. Serve immediately.',\n",
+       "  '1. Crumble RO Crumbs into a crock\\n2. Coat Croco with Curing Oil\\n3. Ooze Cream over Croco',\n",
+       "  '1. Preheat oven to 375°F.\\n2. In a bowl, mix together hummus, paprika, and olive oil.\\n3. Dip each cherry tomato half into the hummus mixture, coating evenly.\\n4. Place coated cherry tomato halves on a baking sheet.\\n5. Sprinkle chopped cucumbers on top of tomato halves.\\n6. Bake for 20-25 minutes, or until crispy and golden brown.\\n7. Serve and enjoy!'])"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key_lists = get_key_lists(recipe_list)\n",
+    "key_lists"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3842,34 +3889,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def image_generator(recipe):\n",
+    "\n",
+    "\n",
+    "def image_generator(key_lists):\n",
     "    '''\n",
+    "    key_lists = 3 lists\n",
     "    \n",
     "\n",
     "    '''\n",
     "    client = Client(\"ByteDance/SDXL-Lightning\")\n",
-    "    result = client.predict(\n",
-    "            recipe, # str  in 'Enter your prompt (English)' Textbox component\n",
-    "            \"1-Step\",   # Literal['1-Step', '2-Step', '4-Step', '8-Step']  in 'Select inference steps' Dropdown component\n",
-    "            api_name=\"/generate_image_1\"\n",
-    "    )\n",
-    "    file_path = result.split('gradio')[1]\n",
-    "    print(file_path)\n",
-    "    url = 'https://bytedance-sdxl-lightning.hf.space/file=/tmp/gradio' + file_path\n",
-    "    return url"
+    "    \n",
+    "    titles = key_lists[0]\n",
+    "    print(titles)\n",
+    "    images = []\n",
+    "    for title in titles:\n",
+    "        result = client.predict(\n",
+    "                title, # str  in 'Enter your prompt (English)' Textbox component\n",
+    "                \"1-Step\",   # Literal['1-Step', '2-Step', '4-Step', '8-Step']  in 'Select inference steps' Dropdown component\n",
+    "                api_name=\"/generate_image_1\"\n",
+    "        )\n",
+    "        file_path = result.split('gradio')[1]\n",
+    "        url = 'https://bytedance-sdxl-lightning.hf.space/file=/tmp/gradio' + file_path\n",
+    "        image_urls = images.append(url)\n",
+    "    return image_urls"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded as API: https://bytedance-sdxl-lightning.hf.space ✔\n",
+      "[\"Gurum's Mysterious Delight\", 'Recchio Croco', 'Title:']\n"
+     ]
+    }
+   ],
    "source": [
-    "image_generator('garlic chicken')"
+    "image_generator(key_lists)"
    ]
   },
   {
