put back old combinations_of_two

--- a/notebooks/test-notebook_0521.ipynb
+++ b/notebooks/test-notebook_0521.ipynb
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 244,
    "metadata": {
     "id": "e7tWuDK24AiT"
    },
@@ -2070,33 +2070,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('sugar', 'noodles'), ('sugar', 'lime'), ('sugar', 'mango'), ('noodles', 'lime'), ('noodles', 'mango'), ('lime', 'mango'), [('sugar', 'noodles'), ('sugar', 'lime'), ('noodles', 'lime')], [('sugar', 'noodles'), ('sugar', 'mango'), ('noodles', 'mango')], [('sugar', 'lime'), ('sugar', 'mango'), ('lime', 'mango')], [('noodles', 'lime'), ('noodles', 'mango'), ('lime', 'mango')], [('sugar', 'noodles'), ('sugar', 'lime'), ('sugar', 'mango'), ('noodles', 'lime'), ('noodles', 'mango'), ('lime', 'mango')]]\n",
+      "                                         Combination  \\\n",
+      "0                                   (sugar, noodles)   \n",
+      "1                                      (sugar, lime)   \n",
+      "2                                     (sugar, mango)   \n",
+      "3                                    (noodles, lime)   \n",
+      "4                                      (lime, mango)   \n",
+      "5  [(sugar, noodles), (sugar, lime), (noodles, li...   \n",
+      "6  [(sugar, noodles), (sugar, mango), (noodles, m...   \n",
+      "7     [(sugar, lime), (sugar, mango), (lime, mango)]   \n",
+      "8  [(noodles, lime), (noodles, mango), (lime, man...   \n",
+      "9  [(sugar, noodles), (sugar, lime), (sugar, mang...   \n",
+      "\n",
+      "                                               Score  \n",
+      "0                                 [1.24897032309011]  \n",
+      "1                               [1.3090427271819725]  \n",
+      "2                                [1.370362658185031]  \n",
+      "3                               [1.0033561227552203]  \n",
+      "4                               [1.0557112870493055]  \n",
+      "5  [1.24897032309011, 1.3090427271819725, 1.00335...  \n",
+      "6          [1.24897032309011, 1.370362658185031, -5]  \n",
+      "7  [1.3090427271819725, 1.370362658185031, 1.0557...  \n",
+      "8       [1.0033561227552203, -5, 1.0557112870493055]  \n",
+      "9  [1.24897032309011, 1.3090427271819725, 1.37036...  \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[['onion', 'garlic', 'chicken'], ['n', 'a', 'o', 'g'], ['n', 'h', 'c', 'o']]"
+       "[['lime', 'sugar', 'mango'],\n",
+       " ['lime', 'sugar', 'noodles'],\n",
+       " ['m', 'u', 'a', 's']]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 3 ingredients\n",
+    "# uncommon ingredients\n",
     "\n",
-    "ingredients_input = 'chicken, onion, garlic'\n",
+    "ingredients_input = 'mango, lime, sugar, noodles'\n",
     "\n",
     "ingredients_combinations = combinations_of_two(ingredients_input)\n",
+    "print(ingredients_combinations)\n",
     "df_comb = data_query(ingredients_combinations)\n",
+    "print(df_comb)\n",
     "muse_comb(df_comb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -2107,13 +2141,13 @@
        " ['onion', 'garlic', 'chicken']]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 4 ingredients\n",
+    "#  ingredients\n",
     "\n",
     "ingredients_input = 'chicken, onion, garlic, cheese'\n",
     "\n",
@@ -2152,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2197,7 @@
        " ['onion', 'salt', 'garlic', 'cheese']]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
