fixed documentation up to get_final_recipes

--- a/notebooks/test-notebook_0521.ipynb
+++ b/notebooks/test-notebook_0521.ipynb
@@ -182,7 +182,7 @@
     "    ingredients_input (from: user input in app) =  single string with ingredients separated by commas and a space\n",
     "    \n",
     "    Outputs (1): \n",
-    "    ingredients_combinations (to: data_query) = a list of tuples, containing all possible combinations of 2 (so if it's 4 ingredients, a list of 6 tuples and nothing more)\n",
+    "    ingredients_combinations (to: data_query) = 1 list with a mix of tuples and lists of tuples, containing various ingredient combinations\n",
     "\n",
     "    '''\n",
     "\n",
@@ -732,14 +732,15 @@
    "source": [
     "def data_query(ingredients_combinations): ##Added a penalty of -5 for pairings that are not in the dataframe\n",
     "    '''\n",
-    "    Scores all combinations of two ingredients.\n",
-    "    \n",
-    "    Inputs (1): \n",
-    "    ingredients_combinations (from: combinations_of_two) = a list of tuples, containing all possible combinations of 2 as  \n",
-    "    \n",
-    "    Outputs (1): \n",
-    "    df_comb (to: muse_comb) = a datafrome with columns 'Combination' and 'Score', containing ingredient combinations and their scores as a dataframe  (for 4 ingredients: all 6 combinations and their respective scores)\n",
-    "    \n",
+    "    Scores combinations of ingredients.\n",
+    "    Added a penalty of -5 for pairings that are not in the dataframe\n",
+    "\n",
+    "    Inputs (1):\n",
+    "    ingredients_combinations (from: combinations_of_two) = 1 list with a mix of tuples and lists of tuples, containing various ingredient combinations\n",
+    "\n",
+    "    Outputs (1):\n",
+    "    df_comb (to: muse_comb) = 1 datafrome with columns 'Combination' and 'Score', containing ingredient combinations and their scores as a dataframe  (for 4 ingredients: all 6 combinations and their respective scores)\n",
+    "\n",
     "    '''\n",
     "    \n",
     "    data = []\n",
@@ -1910,17 +1911,17 @@
    },
    "source": [
     "# muse_comb\n",
-    "- output is in desired format (a list of strings) so code will run! However...\n",
-    "\n",
     "<br>Issues:\n",
-    "<br><s>- the output format of data_query needs to be confirmed first for proper testing. is it ok that combinations are in a tuple and score is in a list? (maybe do muse_comb later)</s>\n",
-    "- pretty slow for 5+ ingredients\n",
-    "- 3 ingredients: 2 of the ingredients are just single letters and not ingredients"
+    "- outputting list of single letters for some of the outputs in certain situations, such as when:\n",
+    "    - for 3 ingredient inputs (1 or 2 out of the 3)\n",
+    "    - when ingredients are uncommon or have low compatibility\n",
+    "    \n",
+    "<br>Output format is correct (list of strings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 257,
    "metadata": {
     "id": "e7tWuDK24AiT"
    },
@@ -1928,23 +1929,14 @@
    "source": [
     "def muse_comb(df_comb): ###If this takes too long, consider taking the nested calculate_sum(array) outside of the function\n",
     "    '''\n",
-    "     The function calculates the sum of the \"Score\" values and returns the three combinations with the largest sums\n",
-    "\n",
-    "     NOTE FOR FRONT-END: The return is a list of lists so access the values by indexing e.g. output[0]\n",
-    "\n",
-    "                         The output of this function is the input for the recipe generator\n",
-    "\n",
-    "                         We might need a function to convert each lists into strings if\n",
-    "                         the recipe generator doesn't do this automatically.\n",
+    "    The function calculates the sum of the \"Score\" values and returns the three combinations with the largest sums\n",
     "                         \n",
     "    Inputs (1): \n",
     "    df_comb (from: data_query) = a datafrome with columns 'Combination' and 'Score', containing ingredient combinations and their scores as a dataframe  (for 4 ingredients: all 6 combinations and their respective scores)\n",
     "    \n",
     "    Output (1):\n",
-    "    ingredients_list (to: recipe_generator) = a list of 3 lists, containing the 3 ingredients combinations with highest scores\n",
-    "    [['yeast', 'butter', 'eggs', 'pepper', 'cabbage', 'pork', 'flour', 'sugar'],\n",
-    "    ['butter', 'eggs', 'pepper', 'cabbage', 'pork', 'flour', 'sugar'],\n",
-    "    ['yeast', 'butter', 'eggs', 'pepper', 'cabbage', 'flour', 'sugar']]\n",
+    "    ingredients_list (to: recipe_generator) = 1 list of 3 lists, containing the 3 ingredients combinations with highest scores\n",
+    "        ex.:[['yeast', 'butter', 'eggs', 'pepper', 'cabbage', 'pork', 'flour', 'sugar'], ['butter', 'eggs', 'pepper', 'cabbage', 'pork', 'flour', 'sugar'], ['yeast', 'butter', 'eggs', 'pepper', 'cabbage', 'flour', 'sugar']]\n",
     "    \n",
     "    '''\n",
     "\n",
@@ -1976,101 +1968,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "### Testing muse_comb with pattern 1\n",
-    "(might need to fix data_query output first)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['a', 's', 'g'], ['h', 'c', 'a', 's'], ['h', 'c', 'a', 'g']]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 6 tuples\n",
-    "\n",
-    "ingredients_combinations = [('chicken', 'garlic'),\n",
-    " ('chicken', 'salt'),\n",
-    " ('chicken', 'tomato'),\n",
-    " ('garlic', 'salt'),\n",
-    " ('garlic', 'tomato'),\n",
-    " ('salt', 'tomato')]\n",
-    "\n",
-    "df_comb = data_query(ingredients_combinations)\n",
-    "\n",
-    "ingredients_lists = muse_comb(df_comb)\n",
-    "ingredients_lists"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['e', 'p', 'a', 's'], ['n', 'a', 's', 'o'], ['a', 's', 'g']]"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 15 tuples\n",
-    "\n",
-    "ingredients_combinations = [('tomato', 'beef'),\n",
-    " ('tomato', 'onion'),\n",
-    " ('tomato', 'salt'),\n",
-    " ('tomato', 'garlic'),\n",
-    " ('tomato', 'pepper'),\n",
-    " ('beef', 'onion'),\n",
-    " ('beef', 'salt'),\n",
-    " ('beef', 'garlic'),\n",
-    " ('beef', 'pepper'),\n",
-    " ('onion', 'salt'),\n",
-    " ('onion', 'garlic'),\n",
-    " ('onion', 'pepper'),\n",
-    " ('salt', 'garlic'),\n",
-    " ('salt', 'pepper'),\n",
-    " ('garlic', 'pepper')]\n",
-    "\n",
-    "df_comb = data_query(ingredients_combinations)\n",
-    "\n",
-    "ingredients_lists = muse_comb(df_comb)\n",
-    "ingredients_lists"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing muse_comb with pattern 2"
+    "### Testing muse_comb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -2111,13 +2016,13 @@
        " ['m', 'u', 'a', 's']]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# uncommon ingredients\n",
+    "# uncommon combinations\n",
     "\n",
     "ingredients_input = 'mango, lime, sugar, noodles'\n",
     "\n",
@@ -2130,26 +2035,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['onion', 'cheese', 'garlic', 'chicken'],\n",
-       " ['onion', 'cheese', 'garlic'],\n",
-       " ['onion', 'garlic', 'chicken']]"
+       "[['onion', 'garlic', 'chicken'], ['n', 'a', 'o', 'g'], ['n', 'h', 'c', 'o']]"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#  ingredients\n",
+    "# 3 ingredients\n",
     "\n",
-    "ingredients_input = 'chicken, onion, garlic, cheese'\n",
+    "ingredients_input = 'chicken, onion, garlic'\n",
     "\n",
     "ingredients_combinations = combinations_of_two(ingredients_input)\n",
     "df_comb = data_query(ingredients_combinations)\n",
@@ -2250,10 +2153,10 @@
     "    - Added config.py file to protect API Key. \n",
     "\n",
     "    Inputs (1):\n",
-    "    ingredients_list (from: muse_comb) = a list of 3 lists, containing the 3 ingredients combinations with highest score\n",
+    "    ingredients_list (from: muse_comb) = 1 list of 3 lists, containing the 3 ingredients combinations with highest scores\n",
     "\n",
     "    Outputs (1):\n",
-    "    recipe_list (to: get_scores, final_recipe) = a list of 3 dictionaries with 3 keys each: 'title', 'ingredients', 'directions', containing info for the 3 recipes\n",
+    "    recipe_list (to: get_scores, final_recipe) = 1 list of 3 dictionaries with 3 keys each: 'title', 'ingredients', 'directions', containing info for the 3 recipes\n",
     "\n",
     "    '''\n",
     "\n",
@@ -2800,13 +2703,13 @@
    "source": [
     "def get_scores(recipe_list):\n",
     "    '''\n",
-    "    Generates the score of each recipe.\n",
+    "    Gets the score of each recipe.\n",
     "    \n",
     "    Inputs (1):  \n",
-    "    recipe_list (from: recipe_generator) = a list of 3 dictionaries with 3 keys each: 'title', 'ingredients', 'directions', containing info for the 3 recipes\n",
+    "    recipe_list (from: recipe_generator) = 1 list of 3 dictionaries with 3 keys each: 'title', 'ingredients', 'directions', containing info for the 3 recipes\n",
     "    \n",
     "    Outputs (1):\n",
-    "    scores (to: final_recipes) = a list of 3 integers, containing the scores for each recipe.\n",
+    "    scores (to: final_recipes) = 1 list of 3 integers, containing the scores for each recipe.\n",
     "    '''\n",
     "\n",
     "    scores = []\n",
@@ -3363,10 +3266,6 @@
     "                        old version for this function to still work.\n",
     "                        optimized_gptrecipe() and scoring_model() must be replaced with the actual functions\n",
     "\n",
-    "    UPDATES\n",
-    "    5/13/2024 by everyone:\n",
-    "    - Input format switched to recipe_list (previously: recipe_list was switched to lists of titles, ingredients, directions by code in app.py) \n",
-    "    \n",
     "    Inputs (3):\n",
     "    recipe_list (from: recipe_generator) = a list of 3 dictionaries with 3 keys each: 'title', 'ingredients', 'directions', containing info for the 3 recipes\n",
     "    scores (from: get_scores) = list of 3 integers, containing scores for each recipe\n",
